--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,11 +138,13 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-fbsdk')
     implementation project(':react-native-google-signin')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
 
 // Run this once to be able to run the application with BUCK
