--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "0.59.1",
+    "react-native-fbsdk": "^0.8.0",
     "react-native-google-signin": "^0.10.0"
   },
   "devDependencies": {
